<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>utils</name>
  <version>0.0.0</version>
  <description>A set of ROS utilities for the Qualcomm RB5</description>
  <maintainer email="s4patil@ucsd.edu">Om Patil</maintainer>
  <license>MIT</license>

  <exec_depend>gscam</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
